After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682353 - cdrom mount appears in Bookmarks instead of Devices
cdrom mount appears in Bookmarks instead of Devices
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-08-21 13:24 UTC by William Jon McCann
Modified: 2012-08-22 13:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (13.36 KB, image/png)
2012-08-21 13:24 UTC, William Jon McCann
  Details
Place mounts with no volumes in Devices section of sidebar (3.00 KB, patch)
2012-08-21 21:04 UTC, William Jon McCann
committed Details | Review

Description William Jon McCann 2012-08-21 13:24:54 UTC
Created attachment 221992 [details]
screenshot

I was trying to reproduce bug 586644 using the listed instructions and I saw this.
Comment 1 William Jon McCann 2012-08-21 21:04:31 UTC
Created attachment 222078 [details] [review]
Place mounts with no volumes in Devices section of sidebar
Comment 2 Cosimo Cecchi 2012-08-22 09:59:09 UTC
Review of attachment 222078 [details] [review]:

Looks good, thanks.
Comment 3 William Jon McCann 2012-08-22 13:01:43 UTC
Attachment 222078 [details] pushed as 06476bd - Place mounts with no volumes in Devices section of sidebar