Place mounts with no volumes in Devices section of sidebar

https://bugzilla.gnome.org/show_bug.cgi?id=682353